--- a/GoAuction.Server/appsettings.json
+++ b/GoAuction.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CadenaSQL": "Server=STEVEN\\SQLEXPRESS; Database=DbTiendaBlazor; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
